<resources>
    <string name="app_name">Chats-Kotlin</string>

    <string name="default_web_client_id">756240830321-n2hn6d1bl2mhdubfbq23670mrskd3p1j.apps.googleusercontent.com</string>

    <string name="item_perfil">Pefil</string>>
    <string name="item_usuarios">Usuarios</string>>
    <string name="item_chats">Chats</string>>
    <string name="tv_Titulo">Título</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>>

    <string name="opcionEmail">Continuar con EMail</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_Login">Login</string>
    <string name="et_Email">Correo Electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repetir contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="btn_CerrarSesion">Cerrar Sesión</string>
</resources>
