<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
   android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginEmailActivity">

    <TextView
        android:text="@string/txt_Login"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:layout_marginTop="10dp"
        android:src="@drawable/login_usuario"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Ingresar"
        android:layout_marginTop="40dp"
        app:cornerRadius="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn_Ingresar"
        android:textAllCaps="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/tv_registrarme"
        android:text="@string/tv_registrarme"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>